// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step should render correctly 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH hDonXm sc-fzXfLR ittBmB"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH QDGwA"
      direction="vertical"
      height="calc(100% - 71px)"
      overflow="scroll"
      width="100%"
    >
      children
    </div>
    <div
      class="sc-AykKH dEVnXs"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH gsVXKK sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC sc-fzXfLP hRrGAN"
          tabindex="-1"
        >
          back
        </button>
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC jJKHJl"
          width="100%"
        >
          Next
          <img
            alt=""
            class="sc-fzXfLQ jNZvTh"
            src="right_chevron_white.svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step should render correctly when a background is provided 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH fAxPAn sc-fzXfLR ittBmB"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH QDGwA"
      direction="vertical"
      height="calc(100% - 71px)"
      overflow="scroll"
      width="100%"
    >
      children
    </div>
    <div
      class="sc-AykKH dEVnXs"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH gsVXKK sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC sc-fzXfLP hRrGAN"
          tabindex="-1"
        >
          back
        </button>
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC jJKHJl"
          width="100%"
        >
          Next
          <img
            alt=""
            class="sc-fzXfLQ jNZvTh"
            src="right_chevron_white.svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step should render correctly when an image is provided 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH hDonXm sc-fzXfLR iFIAzs"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH QDGwA"
      direction="vertical"
      height="calc(100% - 71px)"
      overflow="scroll"
      width="100%"
    >
      children
    </div>
    <div
      class="sc-AykKH dEVnXs"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH gsVXKK sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC sc-fzXfLP hRrGAN"
          tabindex="-1"
        >
          back
        </button>
        <button
          aria-controls="recipe-steps"
          class="sc-AykKC jJKHJl"
          width="100%"
        >
          Next
          <img
            alt=""
            class="sc-fzXfLQ jNZvTh"
            src="right_chevron_white.svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Step should render correctly when is dialog is true 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH blaGdK sc-fzXfLR ittBmB"
    direction="vertical"
    height="100%"
    width="100%"
  >
    <div
      class="sc-AykKH QDGwA"
      direction="vertical"
      height="calc(100% - 71px)"
      overflow="scroll"
      width="100%"
    >
      children
    </div>
    <div
      class="sc-AykKH dEVnXs"
      direction="vertical"
      width="100%"
    >
      <div
        class="sc-AykKH gsVXKK sc-fzXfLO fZNNwI"
        direction="horizontal"
        width="100%"
      >
        <button
          class="sc-AykKC flXWAU"
          width="100%"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
